# ObjectSearch

./: CHANGES.md  Cargo.toml  README.md
page/: index.html  package.json  pnpm-lock.yaml
page/src/: App.vue  style.scss
page/src/lib/: bridge.ts  ipc.ts
page/src/lib/types/: search.ts
page/src/types/: search.ts
src/: config.rs  lib.rs  parser.rs  ws_popup.rs
