[package]
name = "object-search"
version = "0.2.0"
edition = "2024"

[dependencies]
aviutl2 = { git = "https://github.com/sevenc-nanashi/aviutl2-rs.git", branch = "feat/plugin2" }
raw-window-handle = "0.6.2"
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
] }
wry = "0.53.5"
include_dir = "0.7.4"
dirs = "6.0.0"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
mime_guess = "2.0.5"
tap = "1.0.1"
fuzzy-matcher = "0.3.7"
toml = "0.9.8"

[lib]
name = "object_search"
crate-type = ["cdylib"]
